--- a/Notebooks/Save data as Feather.ipynb
+++ b/Notebooks/Save data as Feather.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/olle/Documents/OrderBookRL\n"
+      "/home/valldabo/Documents/orderbookrl\n"
      ]
     }
    ],
@@ -53,28 +53,190 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5486159990\n",
-      "5486593951\n",
-      "5487047820\n",
-      "5487521543\n",
-      "5487964732\n",
-      "5488346034\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5562200804\n",
+      "Unexpected character found when decoding array value (2)\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5562200804\n",
+      "Unexpected character found when decoding array value (2)\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5562200804\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5571311801\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5572369570\n",
+      "Unmatched ''\"' when when decoding 'string'\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5572369570\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5578010157\n",
+      "Unmatched ''\"' when when decoding 'string'\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5578010157\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5578010157\n",
+      "Unmatched ''\"' when when decoding 'string'\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5579840832\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5599804371\n",
+      "Unexpected character found when decoding array value (2)\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5599804371\n",
+      "Unexpected character found when decoding array value (2)\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5599804371\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5599804371\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5599804371\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
       "5488728583\n",
-      "5489091550\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
       "5489439697\n",
-      "5489848136\n",
-      "5490234651\n",
-      "5490586963\n",
-      "5490952864\n",
-      "5491359778\n",
-      "5491790864\n"
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5495561516\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5495561516\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5495561516\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5497565858\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5522467940\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5523233817\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5523233817\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5523233817\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5523233817\n",
+      "Unexpected character found when decoding array value (2)\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5523233817\n",
+      "Unexpected character found when decoding array value (2)\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5523233817\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5523233817\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5526334648\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5526334648\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5526334648\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5531396035\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5532227008\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5532227008\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5532227008\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5532227008\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5532227008\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5535535499\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5535535499\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5546275681\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5547581067\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5547581067\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5547581067\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5548573659\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5548573659\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5548573659\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5549163514\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5549163514\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5549163514\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5549163514\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5549163514\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5549163514\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5551950110\n",
+      "Trailing data\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5551950110\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5553530800\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5553530800\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5558422586\n",
+      "Expected object or value\n",
+      "a bytes-like object is required, not 'str'\n",
+      "5558422586\n"
      ]
     }
    ],
@@ -82,26 +244,38 @@
     "import ujson\n",
     "import pickle\n",
     "import os\n",
-    "import msgpack\n",
     "import math\n",
     "\n",
     "files = os.listdir('data/json/')\n",
     "snap_files = sorted([filename for filename in files if 'snaps' in filename])\n",
     "    \n",
     "for snapfile in snap_files:\n",
-    "    with open('data/json/' + snapfile , 'r') as f:\n",
-    "        snaps = f.readlines()\n",
-    "        for snap in snaps:\n",
-    "            snap = ujson.loads(snap)\n",
-    "            seq = snap['sequence']\n",
-    "            print(seq)\n",
-    "            with open('data/snap_json/snap_' + str(seq) + '.json', 'w') as snapf:\n",
-    "                ujson.dump(snap, snapf)"
+    "    with open('data/json/' + snapfile , 'rb') as f:\n",
+    "        try:\n",
+    "            snaps = f.readlines()\n",
+    "            for snap in snaps:\n",
+    "                try:\n",
+    "                    snap = ujson.loads(snap)\n",
+    "                except Exception as e:\n",
+    "                    print(e)\n",
+    "                    try:\n",
+    "                        snap = ujson.loads(snap.replace(\"\\x00\", \"\"))\n",
+    "                    except Exception as e:\n",
+    "                        print(e)\n",
+    "                        print(seq)\n",
+    "                        continue\n",
+    "\n",
+    "                seq = snap['sequence']\n",
+    "\n",
+    "                with open('data/snap_json/snap_' + str(seq) + '.json', 'w') as snapf:\n",
+    "                    ujson.dump(snap, snapf)\n",
+    "        except:\n",
+    "            pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +287,116 @@
       "2\n",
       "3\n",
       "4\n",
-      "5\n"
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "30\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "34\n",
+      "35\n",
+      "36\n",
+      "37\n",
+      "38\n",
+      "39\n",
+      "40\n",
+      "41\n",
+      "42\n",
+      "43\n",
+      "44\n",
+      "45\n",
+      "46\n",
+      "47\n",
+      "48\n",
+      "49\n",
+      "50\n",
+      "51\n",
+      "52\n",
+      "53\n",
+      "54\n",
+      "55\n",
+      "56\n",
+      "57\n",
+      "58\n",
+      "59\n",
+      "60\n",
+      "61\n",
+      "62\n",
+      "63\n",
+      "64\n",
+      "65\n",
+      "66\n",
+      "67\n",
+      "68\n",
+      "69\n",
+      "70\n",
+      "71\n",
+      "72\n",
+      "73\n",
+      "74\n",
+      "75\n",
+      "76\n",
+      "77\n",
+      "78\n",
+      "79\n",
+      "80\n",
+      "81\n",
+      "82\n",
+      "83\n",
+      "84\n",
+      "85\n",
+      "86\n",
+      "87\n",
+      "88\n",
+      "89\n",
+      "90\n",
+      "91\n",
+      "92\n",
+      "93\n",
+      "94\n",
+      "95\n",
+      "96\n",
+      "97\n",
+      "98\n",
+      "99\n",
+      "100\n",
+      "101\n",
+      "102\n",
+      "103\n",
+      "104\n",
+      "105\n",
+      "106\n",
+      "107\n",
+      "108\n",
+      "109\n",
+      "110\n",
+      "111\n",
+      "112\n",
+      "113\n",
+      "114\n"
      ]
     }
    ],
@@ -129,176 +412,47 @@
     "\n",
     "#mess_files = mess_files[0:2]\n",
     "for k, messfile in enumerate(mess_files):\n",
-    "    \n",
     "    print(k)\n",
     "    messages = []\n",
-    "    with open('data/json/' + messfile , 'r') as f:\n",
+    "    with open('data/json/' + messfile , 'rb') as f:\n",
     "        mess = f.readlines()\n",
     "        for m in mess:\n",
-    "            ms = ujson.loads(m)\n",
-    "            ms = {k:v for k,v in ms.items() if k in keys}\n",
-    "            messages.append(ms)\n",
-    "    \n",
+    "            try:\n",
+    "                ms = ujson.loads(m)\n",
+    "                ms = {k:v for k,v in ms.items() if k in keys}\n",
+    "                messages.append(ms)\n",
+    "            except Exception as e:\n",
+    "                continue\n",
+    "\n",
     "    df = pd.DataFrame(messages)\n",
-    "    \n",
-    "    df['funds'] = df['funds'].astype(float)\n",
-    "    df['price'] = df['price'].astype(float).round(price_dec)\n",
-    "    df['size'] = df['size'].astype(float)\n",
+    "\n",
+    "    df['funds'] = pd.to_numeric(df['funds'], errors=\"coerce\")\n",
+    "    df['price'] =  pd.to_numeric(df['price'], errors=\"coerce\")\n",
+    "    df['size'] = pd.to_numeric(df['size'], errors=\"coerce\")\n",
     "    df.replace('sell', 1, inplace=True)\n",
     "    df.replace('buy', 0, inplace=True)\n",
     "    df.side = df.side.fillna(-1)\n",
-    "    df.side = df.side.astype(int)\n",
+    "    df.side = pd.to_numeric(df['side'], errors=\"coerce\")\n",
+    "    #df = df.dropna()\n",
     "    df['trader_id'] = -1\n",
     "    #df.time = pd.to_datetime(df.time)\n",
     "    df.loc[df['size'].isnull(), 'size'] = -1\n",
-    "    feather.write_dataframe(df, 'data/feather/' + str(k) + '.feather')"
+    "    feather.write_dataframe(df, 'data/feather/' + str(int(df.sequence.min())) + '_' + str(int(df.sequence.max())) + '.feather')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>funds</th>\n",
-       "      <th>order_id</th>\n",
-       "      <th>order_type</th>\n",
-       "      <th>price</th>\n",
-       "      <th>reason</th>\n",
-       "      <th>sequence</th>\n",
-       "      <th>side</th>\n",
-       "      <th>size</th>\n",
-       "      <th>time</th>\n",
-       "      <th>type</th>\n",
-       "      <th>trader_id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>cdd8dcb6-015d-4cc2-b684-a8a9e21db517</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>8930.02</td>\n",
-       "      <td>canceled</td>\n",
-       "      <td>5491060906</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>2018-03-24T21:00:02.567000Z</td>\n",
-       "      <td>done</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>87c33f1b-b88b-40ca-9249-e3900f0ab9d5</td>\n",
-       "      <td>limit</td>\n",
-       "      <td>8930.03</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5491060907</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>2018-03-24T21:00:02.582000Z</td>\n",
-       "      <td>received</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>87c33f1b-b88b-40ca-9249-e3900f0ab9d5</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>8930.03</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5491060908</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>2018-03-24T21:00:02.582000Z</td>\n",
-       "      <td>open</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>c618aba3-73f8-4d5c-8f4f-97b23e52ee07</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>8953.29</td>\n",
-       "      <td>canceled</td>\n",
-       "      <td>5491060909</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>2018-03-24T21:00:02.582000Z</td>\n",
-       "      <td>done</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>87c33f1b-b88b-40ca-9249-e3900f0ab9d5</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>8930.03</td>\n",
-       "      <td>canceled</td>\n",
-       "      <td>5491060910</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>2018-03-24T21:00:02.588000Z</td>\n",
-       "      <td>done</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   funds                              order_id order_type    price    reason  \\\n",
-       "0    NaN  cdd8dcb6-015d-4cc2-b684-a8a9e21db517        NaN  8930.02  canceled   \n",
-       "1    NaN  87c33f1b-b88b-40ca-9249-e3900f0ab9d5      limit  8930.03       NaN   \n",
-       "2    NaN  87c33f1b-b88b-40ca-9249-e3900f0ab9d5        NaN  8930.03       NaN   \n",
-       "3    NaN  c618aba3-73f8-4d5c-8f4f-97b23e52ee07        NaN  8953.29  canceled   \n",
-       "4    NaN  87c33f1b-b88b-40ca-9249-e3900f0ab9d5        NaN  8930.03  canceled   \n",
-       "\n",
-       "     sequence  side  size                         time      type  trader_id  \n",
-       "0  5491060906     0  -1.0  2018-03-24T21:00:02.567000Z      done         -1  \n",
-       "1  5491060907     0   0.9  2018-03-24T21:00:02.582000Z  received         -1  \n",
-       "2  5491060908     0  -1.0  2018-03-24T21:00:02.582000Z      open         -1  \n",
-       "3  5491060909     1  -1.0  2018-03-24T21:00:02.582000Z      done         -1  \n",
-       "4  5491060910     0  -1.0  2018-03-24T21:00:02.588000Z      done         -1  "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "orderbookrl",
    "language": "python",
-   "name": "python3"
+   "name": "orderbookrl"
   },
   "language_info": {
    "codemirror_mode": {
@@ -310,7 +464,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
